--- a/.github/workflows/fh.yml
+++ b/.github/workflows/fh.yml
@@ -1,25 +1,21 @@
-# angle/.github/workflows/fh.yml
-# --------------------------------------------------------------
-# Copyright (C) 2025 Qompass AI, All rights reserved
-
-name: Publish to FlakeHub via Self-Hosted Runner
+name: Publish to FlakeHub
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   flakehub-publish:
-    runs-on: [self-hosted, linux, x64]
+    strategy:
+      matrix:
+        system: [x86_64-linux, aarch64-linux, aarch64-darwin]
+          runs-on: [self-hosted, linux, x64, ${{ matrix.system }}]
     permissions:
       id-token: write
       contents: read
     steps:
       - uses: actions/checkout@v4
-      
       - uses: DeterminateSystems/nix-installer-action@main
-      
       - uses: DeterminateSystems/flakehub-push@main
         with:
           name: qompassai/angle
